# athena

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  biome.json  compose.yml  config.json  config.toml  expanded.rs  go.work  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  turbo.json  watcher.md
crates/api/: Cargo.toml
crates/api/src/: errors.rs  jwt.rs  leaderboard.rs  lib.rs  main.rs  redis_keys.rs  schemas.rs  tasks.rs  templates.rs  token.rs
crates/api/src/api/: admin_routes.rs  doc.rs
crates/api/src/docker/: caddy.rs  manager.rs
crates/api/src/fileserver/: manager.rs
crates/api/src/handlers/: admin.rs  award.rs  ban.rs  challenge.rs  challenge_file.rs  container.rs  deployment.rs  file.rs  fileserver.rs  flag.rs  hint.rs  instance.rs  invite.rs  leaderboard.rs  mod.rs  notification.rs  permission.rs  player.rs  player_award.rs  rbac.rs  settings.rs  submission.rs  team.rs  ticket.rs  unlock.rs
crates/api/src/middleware/: auth.rs  ctf.rs
crates/api/src/permission/: manager.rs
crates/api/src/rbac/: defaults.rs  manager.rs
crates/api/src/routes/: admin_routes.rs  doc.rs  mod.rs
crates/athena/: Cargo.toml
crates/athena/src/: cli.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: json_path.rs  lib.rs
crates/entity/: Cargo.toml  build.rs
crates/entity/src/: achievement.rs  admin.rs  ban.rs  challenge.rs  challenge_tag.rs  container.rs  deployment.rs  extensions.rs  file.rs  flag.rs  hint.rs  instance.rs  invite.rs  leaderboard.rs  lib.rs  links.rs  notification.rs  player.rs  prelude.rs  sea_orm_active_enums.rs  submission.rs  tag.rs  team.rs  ticket.rs  unlock.rs  user.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20240408_123948_create_user_table.rs  m20240408_123964_create_admin_table.rs  m20240408_124022_create_ban_table.rs  m20240408_124042_create_team_table.rs  m20240408_124136_create_player_table.rs  m20240408_124245_create_challenge_table.rs  m20240408_124310_create_achievement_table.rs  m20240408_124310_create_award_table.rs  m20240408_124319_create_file_table.rs  m20240408_124336_create_player_achievement_table.rs  m20240408_124336_create_player_award_table.rs  m20240408_124342_create_flag_table.rs  m20240408_124400_create_tag_table.rs  m20240408_124410_create_deployment_table.rs  m20240408_124424_create_instance_table.rs  m20240408_124445_create_hint_table.rs  m20240408_124465_create_unlock_table.rs  m20240408_124505_create_notification_table.rs  m20240408_124527_create_invite_table.rs  m20240408_124602_create_submission_table.rs  m20240408_124614_create_challenge_file_table.rs  m20240408_124634_create_challenge_tag_table.rs  m20240408_124750_create_container_table.rs  m20240408_124760_create_container_table.rs  m20240408_124760_create_ticket_table.rs  m20241029_113729_create_update_notify_function.rs  m20241029_114100_create_notification_change_trigger.rs
crates/notifier/: Cargo.toml  package.json
crates/notifier/src/: listener.rs  listener_stup.sql  main.rs  pg.rs
crates/oxide/: Cargo.toml  Dockerfile  permissions.toml
crates/oxide-core/: Cargo.toml  TODO.md  build.rs  permissions.toml
crates/oxide-core/src/: docker.rs  errors.rs  lib.rs  mail.rs  permissions.rs  schemas.rs  service.rs  settings.rs  token.rs
crates/oxide-core/src/api/: achievement.rs  admin.rs  admin_routes.rs  auth.rs  ban.rs  challenge.rs  challenge_tag.rs  doc.rs  file.rs  flag.rs  hint.rs  image.rs  instance.rs  invite.rs  leaderboard.rs  mod.rs  notification.rs  player.rs  router_wrapper.rs  settings.rs  submission.rs  tag.rs  tasks.rs  team.rs  ticket.rs  unlock.rs
crates/oxide-core/src/db/: achievement.rs  admin.rs  ban.rs  challenge.rs  challenge_tag.rs  container.rs  deployment.rs  file.rs  flag.rs  hint.rs  instance.rs  invite.rs  leaderboard.rs  manager.rs  mod.rs  notification.rs  player.rs  submission.rs  tag.rs  team.rs  ticket.rs  token.rs  unlock.rs  user.rs
crates/oxide-core/src/docker/: caddy.rs  manager.rs  mod.rs
crates/oxide-core/src/entity/: achievement.rs  ban.rs  challenge.rs  challenge_tag.rs  file.rs  flag.rs  hint.rs  instance.rs  invite.rs  leaderboard.rs  manager.rs  mod.rs  notification.rs  player.rs  prelude.rs  sea_orm_active_enums.rs  submission.rs  tag.rs  team.rs  ticket.rs  token.rs  unlock.rs
crates/oxide-core/src/handlers/: achievement.rs  admin.rs  award.rs  ban.rs  challenge.rs  challenge_file.rs  challenge_tag.rs  container.rs  deployment.rs  file.rs  flag.rs  hint.rs  image.rs  instance.rs  invite.rs  leaderboard.rs  manager.rs  mod.rs  notification.rs  player.rs  player_achievement.rs  player_award.rs  settings.rs  stats.rs  submission.rs  tag.rs  team.rs  ticket.rs  unlock.rs  user.rs
crates/oxide-core/src/middleware/: access_control.rs  auth.rs  ctf.rs  ctf_timer.rs  mod.rs
crates/oxide-core/src/migration/: m20240408_123964_create_manager_table.rs  m20240408_124022_create_ban_table.rs  m20240408_124042_create_team_table.rs  m20240408_124136_create_player_table.rs  m20240408_124245_create_challenge_table.rs  m20240408_124319_create_file_table.rs  m20240408_124342_create_flag_table.rs  m20240408_124400_create_tag_table.rs  m20240408_124424_create_instance_table.rs  m20240408_124445_create_hint_table.rs  m20240408_124465_create_unlock_table.rs  m20240408_124505_create_notification_table.rs  m20240408_124527_create_invite_table.rs  m20240408_124602_create_submission_table.rs  m20240408_124750_create_leaderboard_table.rs  m20240408_124760_create_ticket_table.rs  mod.rs
crates/oxide/src/: app_state.rs  cli.rs  errors.rs  jwt.rs  leaderboard.rs  lib.rs  main.rs  permissions.rs  redis_keys.rs  schemas.rs  service.rs  tasks.rs  token.rs
crates/oxide/src/api/: admin_routes.rs  doc.rs  mod.rs  tasks.rs
crates/oxide/src/docker/: caddy.rs  manager.rs
crates/oxide/src/handlers/: admin.rs  award.rs  ban.rs  challenge.rs  challenge_file.rs  challenge_tag.rs  container.rs  deployment.rs  file.rs  flag.rs  hint.rs  instance.rs  invite.rs  leaderboard.rs  mod.rs  (+10 more)
crates/watcher/: Cargo.toml
crates/watcher/src/: db.rs  main.rs
(+771 files in other folders)
