[workspace]
resolver = "2"
members = ["crates/*"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[workspace.dependencies]
axum = { version = "0.7.7", features = ["macros", "multipart"] }
chrono = { version = "0.4.38", features = ["serde"] }
fastrand = "2.1.1"
futures = "0.3.31"
sea-orm = { version = "1.1.0", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower-http = { version = "0.6.1", features = ["cors", "timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = { version = "5.2.0", features = [
    "axum_extras",
    "uuid",
    "chrono",
    "url",
] }
uuid = { version = "1.11.0", features = ["serde", "v7", "fast-rng"] }
