[workspace]
resolver = "2"
members = ["crates/*"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[workspace.dependencies]
axum = { version = "0.7.7", features = ["macros", "multipart"] }
base64ct = "1.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
fastrand = "2.2.0"
futures = "0.3.31"
indexmap = { version = "2.6.0", features = ["serde"] }
sea-orm = { version = "1.1.1", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower-http = { version = "0.6.1", features = ["cors", "timeout", "trace"] }
tower-sessions = { version = "0.13.0", features = ["signed"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = { version = "5.2.0", features = [
    "axum_extras",
    "uuid",
    "chrono",
    "url",
    "config",
] }
uuid = { version = "1.11.0", features = ["serde", "v7", "fast-rng"] }
dashmap = { version = "6.1.0", features = ["inline"] }
