[workspace]
resolver = "2"
members = ["crates/*"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[workspace.dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.1", features = ["macros", "multipart"] }
base64ct = "1.6.0"
chrono = { version = "0.4.39", features = ["serde"] }
fastrand = "2.3.0"
futures = "0.3.31"
indexmap = { version = "2.7.0", features = ["serde"] }
sea-orm = { version = "1.1.3", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower-http = { version = "0.6.2", features = ["cors", "timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.3.1", features = [
    "axum_extras",
    "uuid",
    "chrono",
    "url",
    "config",
] }
uuid = { version = "1.11.0", features = ["serde", "v7", "fast-rng"] }
dashmap = { version = "6.1.0", features = ["inline"] }
