[package]
name = "api"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"


[dependencies]
argon2 = { workspace = true }
askama = "0.12.1"
axum = { workspace = true }
bollard = { version = "0.18.1", features = ["chrono"] }
config = { path = "../config" }
chrono = { workspace = true }
entity = { path = "../entity" }
fastrand = { workspace = true }
fred = { version = "10.0.3", features = ["partial-tracing", "i-hexpire"] }
lettre = { version = "0.11.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "pool",
    "hostname",
    "builder",
    "serde",
] }
api-macros = { path = "../api-macros" }
regex = "1.11.1"
ring = "0.17.8"
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.10"
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
dashmap = { workspace = true }
tempfile = "3.15.0"
tokio-util = { version = "0.7.13", features = ["io"] }
bytes = "1.9.0"
base62 = "2.1.0"
jsonwebtoken = "9.3.0"
axum-extra = { version = "0.10.0", features = [
    "cookie",
    "cookie-signed",
    "typed-header",
] }
tokio-cron-scheduler = { version = "0.13.0", features = ["signal"] }
axum_typed_multipart = "0.15.1"
object_store = { version = "0.11.2", features = ["aws"] }
clap = { version = "4.5.24", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
tracing-subscriber.workspace = true


[features]
file-transport = ["lettre/file-transport"]
