[package]
name = "athena"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
config = { path = "../config" }
entity = { path = "../entity" }
oxide = { path = "../oxide" }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
