[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
base64ct = { workspace = true }
chrono = { workspace = true }
config_rs = { package = "config", version = "0.14.1", default-features = false, features = [
    "async",
    "convert-case",
    "json",
] }
fastrand = { workspace = true }
indexmap = { workspace = true }
schemars = { version = "0.8.21", features = ["uuid1", "indexmap2", "chrono"] }
serde = { workspace = true }
serde_json = { workspace = true }
oxide-macros = { path = "../oxide-macros" }
