[package]
name = "config"
version = "0.1.0"
edition = "2024"

[dependencies]
base64ct = { workspace = true }
chrono = { workspace = true }
config_rs = { package = "config", version = "0.14.1", default-features = false, features = [
    "async",
    "convert-case",
    "json",
] }
fastrand = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
api-macros = { path = "../api-macros" }
