[package]
name = "notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = "1.11.0"
entity = { path = "../entity" }
tracing = { workspace = true }
tracing-subscriber = "0.3.18"
futures = "0.3.31"
tower-http = "0.6.1"
tokio-stream = "0.1.16"
async-stream = "0.3.6"
sqlx = "0.8.2"
