[package]
name = "oxide-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
askama = "0.12.1"
axum = { workspace = true }
fred = "9.3.0"
bollard = { version = "0.17.1", features = ["chrono"] }
config = { path = "../config" }
chrono = { workspace = true }
entity = { path = "../entity" }
faster-hex = "0.10.0"
fastrand = "2.1.1"
imap = "3.0.0-alpha.14"
imap-proto = "0.16.5"
jsonwebtoken = "9.3.0"
lettre = { version = "0.11.9", default-features = false, features = [
    "rustls-tls",
    "smtp-transport",
    "pool",
    "hostname",
    "builder",
    "serde",
] }
oxide-macros = { path = "../oxide-macros" }
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.6"
ring = "0.17.8"
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.64"
tokio = { workspace = true }
tower-http = { version = "0.6.1", features = ["full"] }
tracing = { workspace = true }
utoipa = { workspace = true }
uuid = { version = "1.10.0", features = ["serde", "v7", "fast-rng"] }

[build-dependencies]
heck = "0.5.0"
quote = "1.0.37"
serde = { workspace = true }
toml = "0.8.19"

[features]
file-transport = ["lettre/file-transport"]
wrapped_router = []
