[package]
name = "oxide-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
askama = "0.12.1"
axum = { workspace = true }
base64ct = { workspace = true }
bollard = { version = "0.17.1", features = ["chrono"] }
config = { path = "../config" }
chrono = { workspace = true }
entity = { path = "../entity" }
fastrand = { workspace = true }
fred = { version = "9.4.0", features = ["partial-tracing"] }
imap = { version = "3.0.0-alpha.14", default-features = false, features = [
    "rustls-tls",
] }
imap-proto = "0.16.5"
lettre = { version = "0.11.10", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "pool",
    "hostname",
    "builder",
    "serde",
] }
oxide-macros = { path = "../oxide-macros" }
regex = "1.11.1"
ring = "0.17.8"
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.2"
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12.9", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tower-sessions = { version = "0.13.0", features = ["signed"] }
tower-sessions-redis-store = "0.14.0"
dashmap = { workspace = true }

[build-dependencies]
heck = "0.5.0"
quote = "1.0.37"
serde = { workspace = true }
toml = "0.8.19"
utoipa-config = "0.1.2"

[features]
file-transport = ["lettre/file-transport"]
