[package]
name = "oxide"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
askama = "0.12.1"
axum = { workspace = true }
base64ct = { workspace = true }
bollard = { version = "0.18.1", features = ["chrono"] }
config = { path = "../config" }
chrono = { workspace = true }
entity = { path = "../entity" }
fastrand = { workspace = true }
fred = { version = "9.4.0", features = ["partial-tracing"] }
lettre = { version = "0.11.10", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "pool",
    "hostname",
    "builder",
    "serde",
] }
oxide-macros = { path = "../oxide-macros" }
regex = "1.11.1"
ring = "0.17.8"
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.3"
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12.9", default-features = false, features = [
    "json",
    "rustls-tls",
] }
dashmap = { workspace = true }
tempfile = "3.14.0"
tokio-util = { version = "0.7.12", features = ["io"] }
bytes = "1.8.0"
csv = "1.3.1"
base62 = "2.0.3"
jsonwebtoken = "9.3.0"
axum-extra = { version = "0.9.6", features = [
    "attachment",
    "cookie",
    "cookie-signed",
    "typed-header",
] }
tokio-cron-scheduler = "0.13.0"

[build-dependencies]
heck = "0.5.0"
quote = "1.0.37"
serde = { workspace = true }
toml = "0.8.19"
utoipa-config = "0.1.2"

[features]
file-transport = ["lettre/file-transport"]
