[package]
name = "watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
config = { path = "../config" }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
entity = { path = "../entity" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
tower-http = { workspace = true }
async-stream = "0.3.6"
sea-orm = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
